[gd_scene load_steps=5 format=3 uid="uid://yd8sqntytqo1"]

[ext_resource type="Texture2D" uid="uid://chgti5bek41p5" path="res://assets/third_drawings/lazer1.png" id="1_ld3bg"]
[ext_resource type="Script" uid="uid://cxnta1jpvfd4w" path="res://scripts/lazer_1.gd" id="1_wkee5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkee5"]
size = Vector2(380, 441)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5c141"]
radius = 11.0
height = 1901.1714

[node name="lazer_1" type="Node2D"]
script = ExtResource("1_wkee5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ld3bg")

[node name="sense_senate" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sense_senate"]
position = Vector2(-49, -815.5)
shape = SubResource("RectangleShape2D_wkee5")

[node name="sense_zuck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sense_zuck"]
position = Vector2(713.00006, -229.99998)
rotation = 2.5028021
shape = SubResource("CapsuleShape2D_5c141")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="sense_zuck"]
position = Vector2(440, -656)
rotation = 2.5028021
shape = SubResource("CapsuleShape2D_5c141")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="sense_zuck"]
position = Vector2(422, -739)
rotation = 2.5028021
shape = SubResource("CapsuleShape2D_5c141")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="sense_zuck"]
position = Vector2(-845.9999, -93.00001)
rotation = -2.4678955
shape = SubResource("CapsuleShape2D_5c141")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="sense_zuck"]
position = Vector2(-486.99985, -490.00006)
rotation = -2.4678955
shape = SubResource("CapsuleShape2D_5c141")

[connection signal="body_entered" from="sense_senate" to="." method="_on_sense_senate_body_entered"]
[connection signal="body_exited" from="sense_senate" to="." method="_on_sense_senate_body_exited"]
[connection signal="body_entered" from="sense_zuck" to="." method="_on_sense_zuck_body_entered"]
[connection signal="body_exited" from="sense_zuck" to="." method="_on_sense_zuck_body_exited"]
